<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/blue_black">
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/pass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/blue_black"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapebuttoncad"
            android:text="@string/logon"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/blue_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/register_account"
        android:textColor="@color/white"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/image_register"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:layout_above="@+id/txt_register"
        android:layout_alignLeft="@+id/txt_register"
        android:layout_alignRight="@+id/txt_register"
        android:background="@color/black"
        android:contentDescription="@string/image_description"
        android:src="@drawable/add" />

    <LinearLayout
        android:id="@+id/linha_admin"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>
</RelativeLayout>
