<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_black">

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/blue_black" >
	
	  	<LinearLayout
	  	    android:focusable="true"
	    	android:focusableInTouchMode="true"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="wrap_content"
	  	    android:background="@color/blue_black"
	  	    android:orientation="vertical" >
	
	  	    <RelativeLayout
	           android:layout_width="match_parent"
	           android:layout_height="60dp"
	           android:background="@color/blue_black" >
	
	           <TextView
	               android:layout_width="match_parent"
	               android:layout_height="wrap_content"
	               android:layout_centerVertical="true"
	               android:gravity="center"
	               android:text="@string/alter_book"
	               android:textColor="@color/white"
	               android:textSize="30sp" />
	
	       </RelativeLayout>
	
	  	    <LinearLayout
	  	        android:layout_width="match_parent"
	  	        android:layout_height="10dp"
	  	        android:background="@color/black"
	  	        android:orientation="vertical" >
	  	    </LinearLayout>
	
	  	    <TextView
	  	        android:layout_width="match_parent"
	  	        android:layout_height="wrap_content"
	  	        android:layout_marginLeft="16dp"
	  	        android:layout_marginTop="10dp"
	  	        android:text="@string/name"
	  	        android:textColor="@color/white"
	  	        android:textSize="7pt" />
	
	  	    	<EditText
	  	            android:id="@+id/book_name"
	  	            android:layout_width="wrap_content"
	  	            android:layout_height="wrap_content"
	  	            android:layout_marginLeft="15dp"
	  	            android:hint="@string/name"
	  	            android:layout_marginBottom="10dp"
	  	            android:inputType="textCapWords" />
	  	    
			<LinearLayout
	  	        android:layout_width="match_parent"
	  	        android:layout_height="1dp"
	  	        android:background="@color/white"
	  	        android:orientation="vertical" >
	  	    </LinearLayout>
	  	        
			<TextView
	  	        android:layout_width="match_parent"
	  	        android:layout_height="wrap_content"
	  	        android:layout_marginLeft="16dp"
	  	        android:layout_marginTop="10dp"
	  	        android:text="@string/autor"
	  	        android:textColor="@color/white"
	  	        android:textSize="7pt" />
			
			 <EditText
	  	        android:id="@+id/book_autor"
	  	        android:layout_width="wrap_content"
	  	        android:layout_height="wrap_content"
	  	        android:layout_marginLeft="15dp"
	  	        android:layout_marginBottom="10dp"
	  	        android:inputType="textCapWords"
	  	        android:hint="@string/autor" />
			 
			<LinearLayout
	  	        android:layout_width="match_parent"
	  	        android:layout_height="1dp"
	  	        android:background="@color/white"
	  	        android:orientation="vertical" >
	  	    </LinearLayout>
	  	    
			<TextView
	  	        android:layout_width="match_parent"
	  	        android:layout_height="wrap_content"
	  	        android:layout_marginLeft="16dp"
	  	        android:layout_marginTop="10dp"
	  	        android:text="@string/quantidade"
	  	        android:textColor="@color/white"
	  	        android:textSize="7pt" />
	
	  	    	<EditText
	  	            android:id="@+id/book_quantity"
	  	            android:layout_width="wrap_content"
	  	            android:layout_height="wrap_content"
	  	            android:layout_marginLeft="15dp"
	  	            android:hint="@string/quantidade"
	  	            android:layout_marginBottom="10dp"
	  	            android:inputType="numberDecimal" />
	  	    
			<LinearLayout
	  	        android:layout_width="match_parent"
	  	        android:layout_height="1dp"
	  	        android:background="@color/white"
	  	        android:orientation="vertical" >
	  	    </LinearLayout>
	  	    
			<TextView
	  	            android:layout_width="match_parent"
	  	            android:layout_height="wrap_content"
	  	            android:layout_marginLeft="16dp"
	  	            android:layout_marginTop="10dp"
	  	            android:text="@string/descricao"
	  	            android:textColor="@color/white"
	  	            android:textSize="7pt" />
	  	    <EditText
	  	            android:id="@+id/book_description"
	  	            android:layout_width="wrap_content"
	  	            android:layout_height="120dp"
	  	            android:layout_marginLeft="15dp"
	  	            android:layout_marginBottom="20dp"
	  	            android:inputType="textShortMessage|textMultiLine"
			        android:maxLines="5"
			        android:scrollHorizontally="false"
			        android:scrollbars="vertical"  />

		<RelativeLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:background="@color/black"
			    android:orientation="vertical" >

	        <Button
	            android:id="@+id/book_return"
	            android:layout_width="wrap_content"
	            android:layout_height="50dp"
	            android:layout_alignParentRight="true"
	            android:layout_marginBottom="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="10dp"
	            android:text="@string/cancel" />
	
	        <Button
	            android:id="@+id/book_alter"
	            android:layout_width="wrap_content"
	            android:layout_height="50dp"
	            android:layout_alignParentLeft="true"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginTop="10dp"
	            android:text="@string/alter" />

		</RelativeLayout>
	  	</LinearLayout>
		</ScrollView>
</RelativeLayout>